--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -20,7 +20,7 @@
         <ion-item nav-clear menu-close href="#/app/products">
           Productos
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/orders">
+        <ion-item nav-clear menu-close href="#/app/orders/list">
           Ordenes
         </ion-item>
       </ion-list>
