Add close button to order list

--- a/app/scripts/order/templates/orders-list-status.html
+++ b/app/scripts/order/templates/orders-list-status.html
@@ -38,8 +38,8 @@
 
     <button class="button button-positive"
             data-ng-if="actionButtons.close"
-            data-ng-click="">
-      Finalizar
+            data-ng-click="closeOrder(order)">
+      Cerrar
     </button>
 
     <button class="button button-positive"
