Adding assign delivery button

--- a/app/scripts/order/templates/orders-list-status.html
+++ b/app/scripts/order/templates/orders-list-status.html
@@ -32,7 +32,7 @@
 
     <button class="button button-positive"
             data-ng-if="actionButtons.delivery"
-            data-ng-click="">
+            data-ng-click="deliverOrder(order)">
       Asignar delivery
     </button>
 
