--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-view title="Menu" data-ng-controller="MenuCtrl as menu">
+<ion-view title="Menu">
 
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
