--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -14,7 +14,7 @@
 
     <ion-content class="has-header">
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/details">
+        <ion-item nav-clear menu-close href="#/app/store/details">
           Datos
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/products">
