Edit store info

--- a/app/scripts/store/templates/store-details.html
+++ b/app/scripts/store/templates/store-details.html
@@ -11,3 +11,7 @@ Telefonos:
 <div>{{ store.phone.main }}</div>
 <div>{{ store.phone.other }}</div>
 <div>{{ store.phone.cel }}</div>
+
+<button class="button button-block button-positive" data-ng-click="edit()">
+  Actualizar
+</button>
