Added category and productCategory create operation

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -17,8 +17,14 @@
         <ion-item nav-clear menu-close href="#/app/store/details">
           Datos
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/products/category/add">
+          Productos -> Categorias
+        </ion-item>
+        <ion-item nav-clear menu-close href="#/app/products/add">
+          Productos: Agregar
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/products">
-          Productos
+          Productos: Listado
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/orders/list">
           Ordenes
