Updated maxlength attrs

--- a/app/scripts/store/templates/store-edit.html
+++ b/app/scripts/store/templates/store-edit.html
@@ -18,6 +18,7 @@
                  data-ng-model="store.name_real"
                  data-ng-class="(storeEditForm.name_real.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
+                 maxlength="50"
                  data-ng-required="true">
 
           <i class="icon ion-alert-circled error"
@@ -34,6 +35,7 @@
                  data-ng-model="store.name_fantasy"
                  data-ng-class="(storeEditForm.name_fantasy.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
+                 maxlength="50"
                  data-ng-required="false">
 
           <i class="icon ion-alert-circled error"
@@ -51,6 +53,7 @@
                  data-ng-model="store.address.street"
                  data-ng-class="(storeEditForm.addr_street.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
+                 maxlength="50"
                  data-ng-required="true">
 
           <i class="icon ion-alert-circled error"
@@ -67,6 +70,7 @@
                  data-ng-model="store.address.door"
                  data-ng-class="(storeEditForm.addr_door.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="5"
+                 maxlength="5"
                  data-ng-required="true">
 
           <i class="icon ion-alert-circled error"
@@ -83,6 +87,7 @@
                  data-ng-model="store.address.area"
                  data-ng-class="(storeEditForm.addr_area.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
+                 maxlength="50"
                  data-ng-required="true">
 
           <i class="icon ion-alert-circled error"
@@ -99,6 +104,7 @@
                  data-ng-model="store.address.hood"
                  data-ng-class="(storeEditForm.addr_hood.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
+                 maxlength="50"
                  data-ng-required="false">
 
           <i class="icon ion-alert-circled error"
@@ -115,6 +121,7 @@
                  data-ng-model="store.address.state"
                  data-ng-class="(storeEditForm.addr_state.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
+                 maxlength="50"
                  data-ng-required="true">
 
           <i class="icon ion-alert-circled error"
@@ -132,6 +139,7 @@
                  data-ng-model="store.phone.main"
                  data-ng-class="(storeEditForm.phone_main.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="10"
+                 maxlength="10"
                  data-ng-pattern="/^[0-9]+$/"
                  data-ng-required="true">
 
@@ -149,6 +157,7 @@
                  data-ng-model="store.phone.other"
                  data-ng-class="(storeEditForm.phone_other.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="10"
+                 maxlength="10"
                  data-ng-pattern="/^[0-9]+$/"
                  data-ng-required="false">
 
@@ -167,6 +176,7 @@
                  data-ng-class="(storeEditForm.phone_cel.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-required="false"
                  data-ng-maxlength="12"
+                 maxlength="12"
                  data-ng-pattern="/^[0-9]+$/">
 
 
