Store - add category - Added maxlength attr

--- a/app/scripts/product/templates/menu-category-add.html
+++ b/app/scripts/product/templates/menu-category-add.html
@@ -27,6 +27,7 @@ Instead they are at $scope.$$childTail.xxx -->
                  data-ng-required="true"
                  data-ng-model="category"
                  data-ng-maxlength="30"
+                 maxlength="30"
                  data-ng-minlength="1"
                  name="category">
           <i class="icon ion-alert-circled error"
