--- a/app/scripts/product/templates/menu-category-add.html
+++ b/app/scripts/product/templates/menu-category-add.html
@@ -11,8 +11,8 @@
 the variables are not found at $scope.xxx.
 Instead they are at $scope.$$childTail.xxx -->
 
-    <div data-ng-show="response.status"
-         data-ng-class="(response.status == 'ok') ? 'msg-success' : 'msg-error'">
+    <div data-ng-show="response"
+         data-ng-class="response.error ? 'msg-error' : 'msg-success'">
       Mensajes::::::::
       <br/>
       {{ response.msg }}
