--- a/app/scripts/product/templates/menu-product-add.html
+++ b/app/scripts/product/templates/menu-product-add.html
@@ -11,8 +11,8 @@ the variables are not found at $scope.xxx.
 Instead they are at $scope.$$childTail.xxx -->
 
 
-    <div data-ng-show="response.status"
-            data-ng-class="response.status == 'ok'? 'ng-valid' : 'ng-invalid'">
+    <div data-ng-show="response"
+            data-ng-class="response.error ? 'msg-error' : 'msg-success'">
       Mensajes::::::::
       <br/>
       {{ response.msg }}
