--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -14,8 +14,8 @@
 
     <ion-content class="has-header">
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/store/details">
-          Datos
+        <ion-item nav-clear menu-close href="#/app/branches">
+          Locales
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/products/category/add">
           Productos -> Categorias
