Refactor: store branches

--- a/app/scripts/store/templates/branch-details.html
+++ b/app/scripts/store/templates/branch-details.html
@@ -32,10 +32,10 @@
 
   </div>
 
-  <button class="button button-block button-positive" data-ng-click="edit()">
+  <button class="button button-block button-positive" data-ng-click="edit(branch.id)">
     Actualizar Datos de contacto
   </button>
-  <button class="button button-block button-positive" data-ng-click="edit('hours')">
+  <button class="button button-block button-positive" data-ng-click="edit(branch.id, 'hours')">
     Actualizar Horarios
   </button>
 
