--- a/app/scripts/store/templates/branch-edit.html
+++ b/app/scripts/store/templates/branch-edit.html
@@ -15,7 +15,7 @@
           <input type="text"
                  placeholder="Razon Social"
                  name="name_real"
-                 data-ng-model="store.name_real"
+                 data-ng-model="branch.name_real"
                  data-ng-class="(storeEditForm.name_real.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
                  maxlength="50"
@@ -32,7 +32,7 @@
           <input type="text"
                  placeholder="Nombre Fantasia"
                  name="name_fantasy"
-                 data-ng-model="store.name_fantasy"
+                 data-ng-model="branch.name_fantasy"
                  data-ng-class="(storeEditForm.name_fantasy.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
                  maxlength="50"
@@ -50,7 +50,7 @@
           <input type="text"
                  placeholder="Calle"
                  name="addr_street"
-                 data-ng-model="store.address.street"
+                 data-ng-model="branch.address.street"
                  data-ng-class="(storeEditForm.addr_street.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
                  maxlength="50"
@@ -67,7 +67,7 @@
           <input type="number"
                  placeholder="Numero"
                  name="addr_door"
-                 data-ng-model="store.address.door"
+                 data-ng-model="branch.address.door"
                  data-ng-class="(storeEditForm.addr_door.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="5"
                  maxlength="5"
@@ -84,7 +84,7 @@
           <input type="text"
                  placeholder="Localidad"
                  name="addr_area"
-                 data-ng-model="store.address.area"
+                 data-ng-model="branch.address.area"
                  data-ng-class="(storeEditForm.addr_area.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
                  maxlength="50"
@@ -101,7 +101,7 @@
           <input type="text"
                  placeholder="Barrio"
                  name="addr_hood"
-                 data-ng-model="store.address.hood"
+                 data-ng-model="branch.address.hood"
                  data-ng-class="(storeEditForm.addr_hood.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
                  maxlength="50"
@@ -118,7 +118,7 @@
           <input type="text"
                  placeholder="Provincia"
                  name="addr_state"
-                 data-ng-model="store.address.state"
+                 data-ng-model="branch.address.state"
                  data-ng-class="(storeEditForm.addr_state.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="50"
                  maxlength="50"
@@ -136,7 +136,7 @@
           <input type="tel"
                  placeholder="Telefono 1"
                  name="phone_main"
-                 data-ng-model="store.phone.main"
+                 data-ng-model="branch.phone.main"
                  data-ng-class="(storeEditForm.phone_main.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="10"
                  maxlength="10"
@@ -154,7 +154,7 @@
           <input type="tel"
                  placeholder="Telefono 2"
                  name="phone_other"
-                 data-ng-model="store.phone.other"
+                 data-ng-model="branch.phone.other"
                  data-ng-class="(storeEditForm.phone_other.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-maxlength="10"
                  maxlength="10"
@@ -172,7 +172,7 @@
           <input type="tel"
                  placeholder="Celular"
                  name="phone_cel"
-                 data-ng-model="store.phone.cel"
+                 data-ng-model="branch.phone.cel"
                  data-ng-class="(storeEditForm.phone_cel.$invalid)? 'ng-invalid' : 'ng-valid'"
                  data-ng-required="false"
                  data-ng-maxlength="12"
