--- a/app/scripts/store/templates/branches-list.html
+++ b/app/scripts/store/templates/branches-list.html
@@ -1,11 +1,11 @@
-<ion-view title="Datos de Local">
+<ion-view title="Listado de Locales">
 
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
 
   <ion-content class="has-header">
-    <store-details></store-details>
+    <branch-details></branch-details>
   </ion-content>
 
 </ion-view>
