Added styles for error/success msgs

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -22,3 +22,8 @@ form input + i.icon.success
 
 .todayHours
   background-color: red
+
+.msg-error
+  background-color: red
+.msg-success
+  background-color: #3d8b3d
