--- a/app/scripts/product/templates/menu-product-add.html
+++ b/app/scripts/product/templates/menu-product-add.html
@@ -11,12 +11,20 @@ the variables are not found at $scope.xxx.
 Instead they are at $scope.$$childTail.xxx -->
 
 
-    <div data-ng-show="response"
-            data-ng-class="response.error ? 'msg-error' : 'msg-success'">
+    <div data-ng-show="response.error"
+         class="msg-error">
       Mensajes::::::::
       <br/>
-      {{ response.msg }}
+      Se ha producido un error al intentar crear el producto '{{response_msg}}'
     </div>
+    <div data-ng-show="formSubmitted && !response.error"
+         class="msg-success">
+      Mensajes::::::::
+      <br/>
+      El producto '{{response_msg}}' ha sido creado con exito!
+    </div>
+
+
     <form name="productAddForm" novalidate>
 
       <div class="list list-inset">
